apps/comparebuilding-web/envs/dev/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comparebuilding-web
  namespace: comparebuilding-web
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: app
          image: ghcr.io/wlodzimierrr/compare_frontend:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 300m
              memory: 256Mi
