apps/comparebuilding-web/envs/dev/ingress-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: comparebuilding-web-http
  namespace: comparebuilding-web
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: comparebuilding.wlodzimierrr.pl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: comparebuilding-web
                port:
                  number: 80
